PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Add key bindings for Emacs text transpose commands:
  - ~<f11> t t r~ bound to *transpose-regions*
  - ~<f11> t t W~ bound to *subword-transpose*
- Add PEL support for the VHDL hardware description language when
  *pel-use-vhdl* is activated (set to t).  This is a early implementation.
  When activated, PEL provides the PEL conventional keys in *vhdl-mode*
  buffers:
  - ~<f12> <f1>~  opens the (new, early) [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/hdl-vhdl.pdf][𝖍𝖉𝔩 - VHDL PDF]] file(or HTML page).
  - ~<f12> <f2>~ opens the customization buffer for PEL VHDL support.
  - ~<f12> <f3>~ opens the Emacs customization buffer for *vhdl-mode*.
- Add PEL support for the Verilog hardware description language when
  *pel-use-verilog* is activated (set to t).  This is a early implementation.
  When activated, PEL provides the PEL conventional keys in *verilog-mode*
  buffers:
  - ~<f12> <f1>~  opens the (new, early) [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/hdl-verilog.pdf][𝖍𝖉𝔩 - Verilog PDF]] file(or HTML page).
  - ~<f12> <f2>~ opens the customization buffer for PEL Verilog support.
  - ~<f12> <f3>~ opens the Emacs customization buffer for *verilog-mode*.
- Add support for the following external package supporting Verilog:
  - [[https://github.com/gmlarumbe/verilog-ts-mode][verilog-ts-mode]], activated by *pel-use-tree-sitter* on Emacs 30.1 or later.
  - [[https://github.com/gmlarumbe/verilog-ext][verilog-ext]] , activated by *pel-use-verilog-ext*.
  - [[https://gitlab.com/koral/veri-kompass][veri-kompass]] , activated by *pel-use-veri-kompass*.
- There's also a slight re-organization of the PEL customization groups: all
  programming language groups are now children of the
  *pel-pkg-for-software-programming-languages* customization group, the